# Veyra

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  build-plan.md  docker-compose.yml  frontend-design.md  pyproject.toml
.github/workflows/: ci.yml
frontend/: README.md  tailwind.tokens.ts
frontend/components/: HeroTerminal.tsx
infra/github/: README.md  branch-protection.json
infra/prometheus/: prometheus.yml
scripts/: demo_self_heal.sh
src/dataforge/: __init__.py  app.py  main.py  registry.py
src/dataforge/contracts/: __init__.py  forecast.py  git.py  health.py  incident.py  lineage.py  patch.py  pipeline.py  rca.py  remediation_workflow.py  retrieval.py  telemetry.py
src/dataforge/core/: __init__.py  config.py  db.py  errors.py  logging.py  middleware.py  observability.py
src/dataforge/core/llm/: __init__.py  client.py  errors.py  factory.py  protocol.py  reliability.py  types.py
src/dataforge/core/llm/providers/: __init__.py  anthropic.py  null.py  ollama.py  openai.py
src/dataforge/datasets/: __init__.py  __main__.py  cli.py  factory.py  loader.py  loghub_spark.py  postmortems.py
src/dataforge/datasets/fixtures/: __init__.py  buggy_pyspark_schema_drift.py  loghub_spark_sample.json  postmortems_sample.json
src/dataforge/modules/: __init__.py  base.py
src/dataforge/modules/gateway/: __init__.py  module.py
src/dataforge/modules/ingestion/: __init__.py  module.py  service.py  spark_eventlog.py
src/dataforge/modules/metadata/: __init__.py  incident_repository.py  lineage_repository.py  models.py  module.py  rca_repository.py  repository.py  workflow_repository.py
src/dataforge/modules/observability/: __init__.py  detectors.py  module.py  service.py
src/dataforge/modules/observability/forecaster/: __init__.py  features.py  model.py  synthetic.py
src/dataforge/modules/observability/ml/: __init__.py  detector.py  factory.py  isolation_forest.py  log_template.py  timeseries.py
src/dataforge/modules/orchestration/: __init__.py  coordinator.py  executor.py  module.py  service.py  workflow.py
src/dataforge/modules/rag/: __init__.py  embedder.py  module.py  profile.py  service.py  vector_store.py
src/dataforge/modules/remediation/: __init__.py  module.py  service.py
src/dataforge/modules/remediation/fixes/: __init__.py  factory.py  generator.py  llm_based.py  rule_based.py
src/dataforge/modules/remediation/git/: __init__.py  github_pr.py  pipeline.py  repo.py
src/dataforge/modules/remediation/patches/: __init__.py  applier.py  generator.py  llm_based.py
src/dataforge/modules/remediation/rca/: __init__.py  analyzer.py  factory.py  llm_based.py  rule_based.py
src/dataforge/simulator/: __init__.py  __main__.py  cli.py  events.py  scenarios.py
tests/: conftest.py  test_app.py  test_datasets.py  test_demo_self_heal.py  test_detectors.py  test_executor.py  test_fix_generator.py  test_forecaster.py  test_git_pipeline.py  test_ingestion_api.py  test_lineage_api.py  test_lineage_repository.py  test_llm_client.py  test_llm_reliability.py  test_ml_detectors.py  test_observability_api.py  test_orchestration_api.py  test_patch_generator.py  test_pipeline_coordinator.py  test_rag_api.py  test_rag_embedder.py  test_rag_semantic_embedder.py  test_rca_analyzer.py  test_rca_api.py  test_rca_llm_analyzer.py  test_simulator.py  test_spark_eventlog.py  test_workflow_state_machine.py
tests/fixtures/: spark_eventlog_failure.jsonl  spark_eventlog_oom_other.jsonl  spark_eventlog_success.jsonl
