[project]
name = "dataforge"
version = "0.1.0"
description = "DataForge AI — AI-native operational intelligence platform for data pipelines (modular monolith MVP)."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
    "httpx>=0.27.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
# Heavy stacks layered in as each module is implemented. Kept optional so the
# foundation installs fast and CI stays quick.
storage = [
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "qdrant-client>=1.12.0",
    "redis>=5.2.0",
]
orchestration = [
    "temporalio>=1.8.0",
    "langgraph>=0.2.0",
]
data = [
    "pyspark==3.5.3",
    "delta-spark==3.2.1",
]
streaming = [
    "aiokafka>=0.12.0",
]
ml = [
    "mlflow>=2.17.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.7.0",
    "black>=24.10.0",
    "mypy>=1.13.0",
    "bandit>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dataforge"]

# ----------------------------------------------------------------------------
# Tooling
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "C4", "SIM"]
ignore = ["S101"]  # allow asserts in tests

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = ["prometheus_fastapi_instrumentator.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.bandit]
exclude_dirs = ["tests"]
