[project]
name = "dataforge"
version = "0.1.0"
description = "DataForge AI — AI-native operational intelligence platform for data pipelines (modular monolith MVP)."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
    "httpx>=0.27.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
# Heavy stacks layered in as each module is implemented. Kept optional so the
# foundation installs fast and CI stays quick.
storage = [
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "qdrant-client>=1.12.0",
    "redis>=5.2.0",
]
orchestration = [
    "temporalio>=1.8.0",
    "langgraph>=0.2.0",
]
data = [
    "pyspark==3.5.3",
    "delta-spark==3.2.1",
]
streaming = [
    "aiokafka>=0.12.0",
]
ml = [
    # Unsupervised tabular anomaly detection on run metrics.
    "scikit-learn>=1.5.0",
    # Log-template mining for "have we seen this error pattern before".
    "drain3>=0.9.11",
]
# mlflow lives in its own extra because drain3's pinned cachetools==4.2.1
# conflicts with mlflow's cachetools>=5.0.0. Use --extra tracking when you
# want experiment tracking (task #12); --extra ml for the detectors.
tracking = [
    "mlflow>=2.17.0",
]
llm = [
    "anthropic>=0.39.0",
    "openai>=1.51.0",
]
embedder = [
    # ONNX-runtime text embedder; ~50MB install, no torch dep. Ships bge-small
    # natively. Lazy-downloads the model file on first embed.
    "fastembed>=0.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.7.0",
    "black>=24.10.0",
    "mypy>=1.13.0",
    "bandit>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ----------------------------------------------------------------------------
# uv: declare extras that can't be installed in the same environment.
# `ml` pulls drain3 which pins cachetools==4.2.1; `tracking` pulls mlflow
# which requires cachetools>=5. Marking them as conflicting tells uv to
# resolve them into separate parts of the lockfile rather than failing.
# ----------------------------------------------------------------------------
[tool.uv]
conflicts = [
    [
        { extra = "ml" },
        { extra = "tracking" },
    ],
]

[tool.hatch.build.targets.wheel]
packages = ["src/dataforge"]

# ----------------------------------------------------------------------------
# Tooling
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "C4", "SIM"]
ignore = ["S101"]  # allow asserts in tests

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = ["prometheus_fastapi_instrumentator.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["anthropic.*", "openai.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["fastembed.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sklearn.*", "drain3.*", "xgboost.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/dataforge"]
branch = true
omit = [
    # Excluded: trivial entry points and config glue with no logic to test.
    "src/dataforge/main.py",
    "src/dataforge/simulator/__main__.py",
]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.bandit]
exclude_dirs = ["tests"]
